completed banking assignment

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 Practice Codes/bank-data/
 Practice Codes/dataset/
+Assignments/Lab Final Assignments/Pneumonia Classification/dataset/
+Assignments/Lab Final Assignments/Bank Term Deposit Prediction/bank-data/
